samples/_failures_safe/1761560466_a46d72_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cd5f866e.c: In function ‘main’:
./samples/SAFE/__tmp_cd5f866e.c:147:64: error: expected ‘)’ at end of input
  147 |         double ratio = (1.0 - (double)compressed.size / (double
      |                                                         ~      ^
      |                                                                )
./samples/SAFE/__tmp_cd5f866e.c:147:9: error: expected declaration or statement at end of input
  147 |         double ratio = (1.0 - (double)compressed.size / (double
      |         ^~~~~~
./samples/SAFE/__tmp_cd5f866e.c:147:9: error: expected declaration or statement at end of input
